# RSCoVLM

./: Data.md  Enviroment.md  README.md  pyproject.toml
rscovlm/eval/: inferencer.py  m4c_evaluator.py  params.py  run.py  run.sh
rscovlm/eval/data/: __init__.py  data.py  dense_det.py  geochat_bench.py  geoground.py  large_image_bench.py  scene_cls.py  teochatlas_bench.py  test_loading.py  vhm_bench.py  vrsbench.py
rscovlm/eval/data/data_prepare/: format_geochat.py  format_image_caption.py  format_scene_cls.py  format_vrsbench.py
rscovlm/eval/data/prepare_incontext_examples/: README.md  in_context_ppl.py  prepare_for_grounding.py  prepare_for_image_cap.py  prepare_for_scene_cls.py  prepare_for_scene_cls_local.py  prepare_for_vqa.py
rscovlm/eval/metric/: __init__.py  dense_det.py  geoground.py  large_image_bench.py  metric.py  teochatlas_bench.py  vhm_bench.py
rscovlm/training/: params.py  train.py  trainer.py
rscovlm/training/data/: __init__.py  config.py  data_collator.py  data_packing.py  dense_det_dataset.py  fast_data_packing.py  get_statistics.py  llava_onevision_dataset.py  processing_message.py  refgeo_dataset.py  sft_dataset.py  synonyms.py  test_loading.py  visual_cot_dataset.py  xeochat_dataset.py
rscovlm/training/monkey_patch/: varlen.py  varlen_legacy.py
rscovlm/utils/: __init__.py  data.py  qwen_vl_utils.py  refer_util.py  utils.py
